# apogeefpi

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
apogeefpi/: __init__.py  __main__.py  actor.py  exceptions.py  tools.py
apogeefpi/etc/: apogeefpi.yml  schema.json
